# pyGORL

./: .gitignore  FQL_loocv_shgo.pkl  Het2QL_loocv_dego.pkl  Het2QL_loocv_shgo.pkl  QL_loocv_shgo.pkl  README.md  autorun.bat  autorun.py  cognitive_analysis.ipynb  cogpolicy.py  data_protection.py  fit_kfold.py  fit_loocv.py  kfold.py  loocv.py  loocv_results_0.pkl  loocv_results_1.pkl  loocv_results_10.pkl  loocv_results_11.pkl  loocv_results_2.pkl  loocv_results_3.pkl  loocv_results_4.pkl  loocv_results_5.pkl  loocv_results_6.pkl  loocv_results_7.pkl  loocv_results_8.pkl  loocv_results_9.pkl  models.py  pg_models.py  pyproject.toml  q_learning_global.ipynb  qlearn_params.csv
.archive/: cogq.py  fit_loocv.py
analysis/: cognitive_analysis copy.ipynb  cognitive_analysis.ipynb  dm_task_selection.ipynb  minimal_analysis.ipynb  neural_model.ipynb  trial_duration_analysis.ipynb  upwind_analysis.ipynb
data/: dmData_06-07-2023.ezip  dmData_08-09-2023.ezip  dmData_14-08-2023.ezip
fitted_models/: Het2FQL_loocv_shgo.pkl
pygorl/: __init__.py  neuronal.py
scripts/: autorun.bat  autorun.py  fit_evenodd_bivalent_depression copy.py  fit_evenodd_bivalent_depression.py  fit_evenodd_bivalent_depression_homeostatic.py  fit_evenodd_bivalent_modulatory.py  fit_evenodd_neuronal.py  fit_evenodd_univalent_bidirectional.py  fit_evenodd_univalent_bidirectional_homeostatic.py  fit_evenodd_univalent_bidirectional_modulatory.py  fit_evenodd_univalent_depression.py  fit_evenodd_univalent_depression_homeostatic.py  fit_evenodd_univalent_modulatory.py  fit_kfold.py
utils/: update.py
(+198 files in other folders)
